[gd_scene load_steps=13 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/fonts/FontHeading.tres" type="DynamicFont" id=2]
[ext_resource path="res://content/gamemode/prestige/RunFinishedPopup.gd" type="Script" id=3]
[ext_resource path="res://gui/fonts/FontHeadingMonospace.tres" type="DynamicFont" id=4]
[ext_resource path="res://content/sounds/UI/ui_tests_02.wav" type="AudioStream" id=5]
[ext_resource path="res://content/gamemode/RunStats.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/sounds/UI/UI_spice_o1.wav" type="AudioStream" id=7]
[ext_resource path="res://gui/panels/panel_outside.tres" type="StyleBox" id=8]
[ext_resource path="res://content/gamemode/prestige/leaderboard/PrestigeLeaderboard.tscn" type="PackedScene" id=9]
[ext_resource path="res://content/sounds/Combat Punch 5.wav" type="AudioStream" id=10]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=11]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=12]

[node name="RunFinishedPopup" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 110.0
margin_right = 1810.0
margin_bottom = 1130.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1700, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1668.0
margin_bottom = 1098.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1620.0
margin_bottom = 1050.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1604.0
margin_bottom = 142.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1588.0
margin_bottom = 126.0
custom_constants/separation = 8

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1572.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "level.gameover.prestige.title"
align = 1

[node name="VariationLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 1572.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 12 )
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 1604.0
margin_bottom = 888.0
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 777.0
margin_bottom = 730.0
size_flags_horizontal = 3

[node name="ScorePanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 777.0
margin_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScorePanel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 765.0
margin_bottom = 212.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScorePanel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 737.0
margin_bottom = 184.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScorePanel/MarginContainer/VBoxContainer"]
margin_right = 721.0
margin_bottom = 25.0
text = "Your final score is..."
align = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScorePanel/MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 721.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="ScoreUploadResult" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScorePanel/MarginContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 721.0
margin_bottom = 168.0
align = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 469.0
margin_right = 777.0
margin_bottom = 501.0
size_flags_vertical = 6

[node name="RunStats" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/MarginContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 761.0
margin_bottom = 16.0
size_flags_vertical = 6

[node name="PrestigeLeaderboard" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 9 )]
margin_left = 827.0
margin_right = 1604.0
margin_bottom = 730.0
size_flags_horizontal = 3

[node name="UnlockElementButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 904.0
margin_right = 1604.0
margin_bottom = 961.0
size_flags_horizontal = 3
text = "level.gameover.proceedtounlock"

[node name="NavigationButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 977.0
margin_right = 1604.0
margin_bottom = 1034.0

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons"]
margin_right = 794.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "level.gameover.backtomainmenu"

[node name="AnotherRunButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons"]
margin_left = 810.0
margin_right = 1604.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "level.gameover.retry"

[node name="Ping" parent="." instance=ExtResource( 11 )]
stream = ExtResource( 5 )
volume_db = 11.216
pitch_scale = 1.14
bus = "UI"
randomPitch = 0.5

[node name="FinalRaised" parent="." instance=ExtResource( 11 )]
stream = ExtResource( 7 )
volume_db = 5.608
pitch_scale = 1.02
bus = "UI"
randomVolume = 1.0
randomPitch = 0.2

[node name="FinalDropped" parent="." instance=ExtResource( 11 )]
stream = ExtResource( 10 )
volume_db = 3.0
pitch_scale = 0.5
bus = "UI"
randomVolume = 1.0
randomPitch = 0.2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UnlockElementButton" to="." method="_on_UnlockElementButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons/AnotherRunButton" to="." method="_on_AnotherRunButton_pressed"]
